fix homepage alignment issue

--- a/wp-content/themes/together-were-more/src/styles/pages/home.scss
+++ b/wp-content/themes/together-were-more/src/styles/pages/home.scss
@@ -9,20 +9,6 @@
 		height: calc(100vh - var(--header-height, 93px));
 	}
 
-	img {
-		--left-align: 30%;
-
-		object-position: var(--left-align) center;
-
-		@include m.media-breakpoint-up(sm) {
-			--left-align: 20%;
-		}
-
-		@include m.media-breakpoint-up(md) {
-			--left-align: 15%;
-		}
-	}
-
 	#scroll-down-icon {
 		--size: 40px;
 
